CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
PROJECT(NKTest)
 
 
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)

IF(COMPILER_MSVC)
	ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
ENDIF()
 
FIND_PACKAGE(Qt5Widgets)
FIND_PACKAGE(Qt5Core)
SET(CMAKE_AUTOMOC ON)
 
FIND_PACKAGE(Boost 1.65.0 REQUIRED COMPONENTS filesystem system)
ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)

FILE(GLOB SOURCES 
    *.h 
    *.cpp 
    Quiz/*.h 
    Quiz/*.cpp)
		
ADD_EXECUTABLE(main ${SOURCES})
TARGET_LINK_LIBRARIES(main ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(main Qt5::Widgets)
TARGET_LINK_LIBRARIES(main Qt5::Core)

INCLUDE_DIRECTORIES(".")
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Quiz)
INCLUDE_DIRECTORIES(${Qt5Core_INCLUDES})
INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDES})