CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
PROJECT(NKTest)
 
 
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)

IF(COMPILER_MSVC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
ENDIF()
 
FIND_PACKAGE(Qt5Widgets)
FIND_PACKAGE(Qt5Core)
FIND_PACKAGE(Qt5Network)
SET(CMAKE_AUTOMOC ON)

FILE(GLOB SOURCES 
    *.h 
    *.cpp 
    Quiz/*.h 
    Quiz/*.cpp)
		
ADD_EXECUTABLE(main ${SOURCES})
TARGET_LINK_LIBRARIES(main Qt5::Widgets)
TARGET_LINK_LIBRARIES(main Qt5::Core)
TARGET_LINK_LIBRARIES(main Qt5::Network)

INCLUDE_DIRECTORIES(".")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Quiz)
INCLUDE_DIRECTORIES(${Qt5Core_INCLUDES})
INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDES})
INCLUDE_DIRECTORIES(${QtNetwork_INCLUDES})